--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Project NEWTECH</title>
 </head>
 <body>
 
-<h1Prototype</h1>
+<h1>Prototype</h1>
 <p>Work in progress, come back and maybe we'll do grand work together.</p>
 
 </body>
