--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Project NEWTECH</title>
-</head>
-<body>
-
-<h1>Prototype</h1>
-<p>Work in progress, come back and maybe we'll do grand work together.</p>
-
-</body>
+<html lang="fr">
+    <head>
+        <title>Projet Newtech</title>
+    </head>
+    <body>
+        <div style='background-color:rgb(73, 167, 255); color:white; padding:50px' borderwidth="10" align="center">
+            <img src="edu.png" alt='Chapeau de diplomé' width = '300' />
+            <h1><ins>Étape I: Création d'une liste inépuisable de contenus éducatif.</ins></h1>
+            <p>“Education is the most powerful weapon which you can use to change the world.”<br/><i>― Nelson Mandela</i></p>
+            
+        </div>
+        <div style='background-color:rgb(73, 255, 149); color:black; padding:50px'>
+            <h2><ins>Machine Learning:</ins></h2>
+            <ol>
+                <li><h3>Roadmaps:</h3></li>
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=MOdlp1d0PNA" target="_blank"> Roadmap: How to Learn Machine Learning in 6 Months (Zach Miller)</a></li>
+                    <br/>
+                    <li><a href="https://www.youtube.com/watch?v=Cr6VqTRO1v0" target="_blank"> Learn Machine Learning in 3 Months (Siraj Raval)</a></li>
+                </ul>
+                <li><h3>Algèbre linéaire:</h3></li>
+                <ul>
+                        <li><a href="https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab" target="_blank">Essence of Linear Algebra (3Blue1Brown)</a></li>
+                        <br/>
+                        <li><a href="https://ocw.mit.edu/courses/mathematics/18-06-linear-algebra-spring-2010/video-lectures/" target="_blank"> MIT 18.06: Linear Algebra (Gilbert Strang)</a></li>
+                        <br/>
+                        <li><a href="https://machinelearningmastery.com/linear_algebra_for_machine_learning/" target="_blank"> [$27] Basics of Linear Algebra for Machine Learning (Jason Brownlee)</a></li>
+                </ul>
+                <li><h3>Calcul infinitésimal:</h3></li>
+                <ul>
+                        <li><a href="https://www.youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr" target="_blank">Essence of Calculus (3Blue1Brown)</a></li>
+                        <br/>
+                        <li><a href="https://ocw.mit.edu/courses/mathematics/18-01-single-variable-calculus-fall-2006/video-lectures/" target="_blank"> MIT 18.01: Single Variable Calculus (David Jerison)</a></li>
+                        <br/>
+                        <li><a href="https://ocw.mit.edu/courses/mathematics/18-02-multivariable-calculus-fall-2007/index.htm" target="_blank">  MIT 18.02: Multivariable Calculus (Denis Auroux)</a></li>
+            </ol>
+        </div>
+    </body>
 </html>
