--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
         <header align="center">
             <h1><ins>Projet Newtech</ins></h1>
-            <p>"New technology is not good or evil in and of itself. It's all about how people choose to use it."<br/><i>― David Wong</i></p>
+            <p>"The day science begins to study non-physical phenomena, it will make more progress in one decade than in all the previous centuries of its existence."<br/><i>― Nikola Tesla</i></p>
         </header>
 
         <section>
-            <article borderwidth="10" align="center" id="Etape1">
+            <article align="center" id="Etape1">
                 <img src="edu.png" alt='Chapeau de diplomé' width = '250' />
                 <h1><ins>Étape I: Création d'une liste inépuisable de contenu éducatif.</ins></h1>
                 <p>“Education is the most powerful weapon which you can use to change the world.”<br/><i>― Nelson Mandela</i></p>  
